vlib/v/checker/tests/globals/global_blank_ident_as_name_err.vv
__global (
    _ = 23
)
